# GKD_Control

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  draw.py  log.txt  log2.txt  xmake.lua
.devcontainer/: Dockerfile  devcontainer.json
include/: actuator.hpp  can.hpp  chassis.hpp  config.hpp  config_hero.hpp  config_infantry.hpp  config_sentry.hpp  dji_motor.hpp  gimbal.hpp  hardware.hpp  io.hpp  macro_helpers.hpp  motor.hpp  pid_controller.hpp  rc_ctrl.hpp  robot.hpp  robot_controller.hpp  serial_interface.hpp  shoot.hpp  shoot_config.hpp  socket_interface.hpp  thread_manager.hpp  types.hpp
include/chassis/: chassis.hpp  chassis_config.hpp  power_controller.hpp
include/configs/: config_hero.hpp  config_infantry.hpp  config_sentry.hpp  robot_type_config.hpp  tempCodeRunnerFile.hpp
include/control/: pid_controller.hpp
include/device/: UI.hpp  cv_controller.hpp  deviece_base.hpp  dji_motor.hpp  imu.hpp  rc_controller.hpp  super_cap.hpp
include/gimbal/: gimbal.hpp  gimbal_config.hpp  gimbal_sentry.hpp  gimbal_temp.hpp
include/io/: serial_interface.hpp
include/robot_controller/: robot_controller.hpp
include/utils/: Matrix.hpp  types.hpp
scripts/: draw.py  log.txt  log2.txt  log3.txt  log4.txt  log5.txt  log6.txt  log7.txt  log8.txt
src/: main.cc
src/chassis/: chassis.cc  power_controler.cc  power_controller.cc
src/control/: pid_controller.cc
src/device/: M9025.cc  UI.cc  cv_controller.cc  device_base.cc  dji_motor.cc  imu.cc  rc_controller.cc  super_cap.cc
src/gimbal/: big_yaw.cc  gimbal-left.cc  gimbal.cc  (+2 more)
(+14 files in other folders)
